--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "## Overview The outbreak of COVID-19 has proven to be a stressful and anxiety-provoking time for many people. Seeing as the entire world is currently undergoing quarantine conditions, we were inspired to create a tool that would help the community adapt to these social changes by creating a routine. We envisioned a platform that would encourage everyone to 1) help themselves through developing healthy & enjoyable habits 2) help others by contributing to those businesses/hospitals/vulnerable populations in need.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index",
+    "dev": "nodemon index"
+
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/nyu-csci-ua-0480-008-spring-2020/final-project/issues"
   },
-  "homepage": "https://github.com/nyu-csci-ua-0480-008-spring-2020/final-project#readme"
+  "homepage": "https://github.com/nyu-csci-ua-0480-008-spring-2020/final-project#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
